<resources>
    <string name="app_name">GitCode</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="action_login">Login</string>
    <string name="personal">personal</string>
    <string name="enterprise">enterprise</string>
    <string name="message_loading">loading</string>
    <string name="loading_more_event">loading more</string>
    <string name="error.default">Something happen unexpected</string>
    <string name="retry">Retry</string>
    <string name="activity_login_title">New account</string>
    <string name="activity_main_title">News</string>
    <string name="item_event_thumb">item_event_thumb</string>
    <string name="item_event_type">item_event_type</string>
    <string name="loading_event_error">An error has occurred when loading events</string>
    <string name="no_more_event">There is no more event.</string>
    <string name="user_login_desc">"logging in as "</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_news">News</string>
    <string name="menu_issues">Issues</string>
    <string name="submenu_event">Events</string>
    <string name="submenu_repositories">Repositories</string>
    <string name="menu_owned">Owned</string>
    <string name="menu_starred">Starred</string>
    <string name="menu_trending">Trending</string>
    <string name="menu_explore">Explore</string>
    <string name="submenu_gists">Gists</string>
    <string name="menu_gists">My Gists</string>
    <string name="menu_public">Public</string>
    <string name="submenu_setting">Info &amp; Preferences</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_accounts">Accounts</string>

    <string name="icon_star" translatable="false">\uf02a</string>
    <string name="icon_email" translatable="false">\uf03b</string>
    <string name="icon_locate" translatable="false">\uf060</string>
    <string name="icon_company" translatable="false">\uf037</string>
    <string name="icon_blog" translatable="false">\uf05c</string>
    <string name="icon_join" translatable="false">\uf046</string>
    <string name="icon_repo" translatable="false">\uf001</string>
    <string name="icon_push" translatable="false">\uf01f</string>
    <string name="icon_pullRequest" translatable="false">\uf009</string>
    <string name="icon_commit" translatable="false">\uf07e</string>
    <string name="icon_fork" translatable="false">\uf002</string>
    <string name="icon_branch" translatable="false">\uf020</string>
    <string name="icon_organization" translatable="false">\uf037</string>
    <string name="icon_code" translatable="false">\uf05f</string>
    <string name="icon_issue" translatable="false">\uf026</string>
    <string name="icon_tag" translatable="false">\uf015</string>
    <string name="icon_language" translatable="false">\uf0b6</string>
    <string name="icon_add" translatable="false">\uf06b</string>
    <string name="icon_owner" translatable="false">\uf017</string>
    <string name="icon_chevron_right" translatable="false">\uf078</string>
    <string name="icon_readme" translatable="false">\uf011</string>
    <string name="icon_website" translatable="false">\uf007</string>
    <string name="followers">Followers</string>
    <string name="icon_rss"></string>
    <string name="menu_events">Events</string>
    <string name="menu_organizations">Organizations</string>
    <string name="icon_respositories"></string>
    <string name="menu_repositories">Repositories</string>
    <string name="icon_gists"></string>
    <string name="go_to_new_activity">go to new acitivity</string>
    <string name="following">Following</string>
    <string name="icon_personal"></string>
    <string name="icon_notifications"></string>
    <string name="icon_right"></string>
    <string name="icon_news"></string>
    <string name="icon_plus"></string>
    <string name="icon_setting"></string>
    <string name="icon_comment"></string>
    <string name="stargazers">Stargazers</string>
    <string name="watchers">Watchers</string>
    <string name="forks">Forks</string>
</resources>
