<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider"
        android:orientation="vertical"
        android:showDividers="middle"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:padding="10dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/activity_user_thumb"
                android:layout_width="99dp"
                android:layout_height="99dp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@drawable/dotcom_mascot"
                app:riv_oval="true"
                app:riv_border_width="2dp"
                app:riv_border_color="@color/white"
                />

            <TextView
                android:id="@+id/activity_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:divider="@drawable/divider"
            android:orientation="horizontal"
            android:showDividers="middle">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="10dp"
                >

                <TextView
                    android:id="@+id/activity_user_follower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="10dp"
                >

                <TextView
                    android:id="@+id/activity_user_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"/>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <com.chendoing.gitcode.ui.widgets.GithubTypefaceTextView
                android:id="@+id/icon_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/icon_rss"
                android:textSize="32sp"
                />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_toEndOf="@id/icon_event"
                android:layout_toRightOf="@id/icon_event"
                android:text="@string/menu_events"
                android:textSize="28sp"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:contentDescription="@string/go_to_new_activity"
                android:src="@drawable/forward"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <com.chendoing.gitcode.ui.widgets.GithubTypefaceTextView
                android:id="@+id/icon_organizations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/icon_organization"
                android:textSize="32sp"
                />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_toEndOf="@id/icon_organizations"
                android:layout_toRightOf="@id/icon_organizations"
                android:text="@string/menu_organizations"
                android:textSize="28sp"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:contentDescription="@string/go_to_new_activity"
                android:src="@drawable/forward"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <com.chendoing.gitcode.ui.widgets.GithubTypefaceTextView
                android:id="@+id/icon_repositories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/icon_respositories"
                android:textSize="32sp"
                />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_toEndOf="@id/icon_repositories"
                android:layout_toRightOf="@id/icon_repositories"
                android:text="@string/menu_repositories"
                android:textSize="28sp"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:contentDescription="@string/go_to_new_activity"
                android:src="@drawable/forward"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <com.chendoing.gitcode.ui.widgets.GithubTypefaceTextView
                android:id="@+id/icon_gists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/icon_gists"
                android:textSize="32sp"
                />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_toEndOf="@id/icon_gists"
                android:layout_toRightOf="@id/icon_gists"
                android:text="@string/menu_gists"
                android:textSize="32sp"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:contentDescription="@string/go_to_new_activity"
                android:src="@drawable/forward"/>
        </RelativeLayout>

    </LinearLayout>
</merge>